[package]
name = "max7219-display"
version = "0.1.5"
edition = "2024"
authors = ["ImplFerris"]
description = "A no_std driver for the MAX7219 LED display controller"
license = "MIT"
repository = "https://github.com/implferris/max7219-display"
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["max7219", "led", "display", "7-segment", "driver"]

[dependencies]
embedded-hal = "1.0.0"
embedded-graphics-core = { version = "0.4.0", optional = true }

[features]
default = []
seven-segment = []
led-matrix = []
graphics = ["dep:embedded-graphics-core"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["thumbv7m-none-eabi", "thumbv7em-none-eabihf"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", "features" = ["eh1"] }
